# tournaments

./: .env  .env.example  .gitignore  Administración de torneos.docx  CMakeLists.txt  CTestTestfile.cmake  Dockerfile.build  Dockerfile.dev  PROJECT_ARCHITECTURE.md  Proyecto Final - Matches.docx  TEST_VERIFICATION_REPORT.md  build-and-test.sh  demo-for-professor.sh  demo-tournament-flow.sh  docker-compose.yml  fix_exec.py  prompt.txt  rebuild-tests.sh  run-service.sh  run-tests-only.sh  start-services.sh  start.sh  test-error-cases.sh  test-match-flow.sh  test-valid-calls.sh  test_match_repository_link.cpp  vcpkg.json
.claude/: mcp.json
build-host/: CMakeCache.txt
database/: cleanup.sql  schema.sql
tournament_common/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
tournament_common/include/domain/: Match.hpp  Tournament.hpp  Utilities.hpp
tournament_common/include/persistence/repository/: GroupRepository.hpp  MatchRepository.hpp  TeamRepository.hpp  TournamentRepository.hpp
tournament_common/src/persistence/repository/: TournamentRepository.cpp
tournament_consumer/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  configuration.json  main.cpp
tournament_consumer/include/configuration/: ContainerSetup.hpp
tournament_consumer/include/consumer/: ScoreRegisteredConsumer.hpp  TeamAddedConsumer.hpp
tournament_services/: CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  configuration.json  configuration.json.example  main.cpp
tournament_services/include/configuration/: ContainerSetup.hpp
tournament_services/include/controller/: GroupController.hpp  MatchController.hpp  TeamController.hpp  TournamentController.hpp
tournament_services/include/delegate/: GroupDelegate.hpp  IGroupDelegate.hpp  IMatchDelegate.hpp  ITeamDelegate.hpp  ITournamentDelegate.hpp  MatchDelegate.hpp  TeamDelegate.hpp  TournamentDelegate.hpp
tournament_services/include/service/: MatchGenerationService.hpp  PlayoffGenerationService.hpp
tournament_services/src/controller/: MatchController.cpp  TeamController.cpp  TournamentController.cpp
tournament_services/src/delegate/: TeamDelegate.cpp  TournamentDelegate.cpp
tournament_services/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
tournament_services/tests/consumer/: ScoreRegisteredConsumerTest.cpp  TeamAddedConsumerTest.cpp
tournament_services/tests/controller/: GroupControllerTest.cpp  MatchControllerTest.cpp  TeamControllerTest.cpp  TournamentControllerTest.cpp
tournament_services/tests/delegate/: GroupDelegateTest.cpp  GroupDelegateTest.cpp.backup  MatchDelegateTest.cpp  TeamDelegateTest.cpp  TournamentDelegateTest.cpp
tournament_services/tests/repository/: MatchRepositoryTest.cpp
tournament_services/tests/service/: MatchGenerationServiceTest.cpp  PlayoffGenerationServiceTest.cpp
